adding the last experiments for linear on small pretrained

--- a/experiments/workshop_experiments/attention_pretrained/small_data/analysis/analysis.ipynb
+++ b/experiments/workshop_experiments/attention_pretrained/small_data/analysis/analysis.ipynb
@@ -377,46 +377,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Layer: 0 -- avg 0.4753086566925049\n",
-      "Layer: 1 -- avg 0.6234567761421204\n",
-      "Layer: 2 -- avg 0.6111111044883728\n",
-      "Layer: 3 -- avg 0.40740740299224854\n",
-      "Layer: 4 -- avg 0.4660493731498718\n",
-      "Layer: 5 -- avg 0.540123462677002\n",
-      "Layer: 6 -- avg 0.5123456716537476\n",
-      "Layer: 7 -- avg 0.45679011940956116\n",
-      "Layer: 8 -- avg 0.4475308656692505\n",
-      "Layer: 9 -- avg 0.4969135820865631\n",
-      "Layer: 10 -- avg 0.604938268661499\n",
-      "Layer: 11 -- avg 0.3888888955116272\n"
+      "0.6327160596847534\n",
+      "0.6111111044883728\n",
+      "0.3672839403152466\n",
+      "0.3827160596847534\n",
+      "0.48148149251937866\n",
+      "0.5586419701576233\n",
+      "0.5185185074806213\n",
+      "0.4722222089767456\n",
+      "0.48765432834625244\n",
+      "0.4444444477558136\n",
+      "0.422839492559433\n",
+      "0.37962964177131653\n"
      ]
     }
    ],
    "source": [
     "for key, attention_dist in attention_dist_dict.items():\n",
-    "    windowed_dist = window_attention_dist(attention_dist, bias_indices, window_size=20)\n",
+    "    windowed_dist = window_attention_dist(attention_dist, bias_indices, window_size=9)\n",
     "    gmm = GaussianMixture(n_components=2)\n",
     "    gmm = gmm.fit(windowed_dist)\n",
     "    labels = gmm.predict(windowed_dist)\n",
     "    gt_labels = dataset.get_val('bias_label')\n",
     "    \n",
     "    correct = (torch.tensor(labels) == gt_labels.to(dtype=torch.long)).float()\n",
-    "    print(\"Layer: {} -- avg {}\".format(key, torch.mean(correct)))"
+    "    #print(\"Layer: {} -- avg {}\".format(key, torch.mean(correct)))\n",
+    "    print(torch.mean(correct).item())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([-0.0017,  0.0124, -0.0072])\n",
+      "tensor([-0.0095,  0.0151,  0.0079])\n",
+      "tensor([-0.0045,  0.0192, -0.0001])\n",
+      "tensor([-0.0096,  0.0183,  0.0052])\n",
+      "tensor([-0.0052,  0.0101,  0.0042])\n",
+      "tensor([-0.0058,  0.0165,  0.0110])\n",
+      "tensor([-0.0025,  0.0033,  0.0103])\n",
+      "tensor([-0.0036,  0.0191,  0.0153])\n",
+      "tensor([ 0.0032, -0.0194,  0.0129])\n",
+      "tensor([0.0039, 0.0039, 0.0066])\n",
+      "tensor([ 0.0065, -0.0894,  0.0010])\n",
+      "tensor([ 0.0061, -0.0504, -0.0019])\n"
+     ]
+    }
+   ],
+   "source": [
+    "for key, attention_dist in attention_dist_dict.items():\n",
+    "    windowed_dist = window_attention_dist(attention_dist, bias_indices, window_size=1)\n",
+    "    attention_dist_0 = windowed_dist[labels_0_indices].squeeze()\n",
+    "    attention_dist_1 = windowed_dist[labels_1_indices].squeeze()\n",
+    "    \n",
+    "    print(torch.mean(attention_dist_0, dim=0) - torch.mean(attention_dist_1, dim=0))"
+   ]
   },
   {
    "cell_type": "code",
